# MLPatrol

./: .coverage  .env.example  .flake8  .gitignore  .last_cve_check  .pre-commit-config.yaml  .secrets.baseline  =0.2.0  =3.5.0  COMPREHENSIVE_CODE_ANALYSIS_REPORT.md  CONTRIBUTING.md  LICENSE  PHASE1_COMPLETION_SUMMARY.md  PHASE2_PROGRESS_UPDATE.md  PROJECT_REORGANIZATION_PLAN.md  README.md  README.md.txt  TODO_FIXES.md  analysis_report.md  app.py  coverage.json  coverage_baseline.json  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt.bak  test_imports.py  test_results.txt
.claude/: settings.local.json
.github/workflows/: python-tests.yml
docs/: AGENT_REASONING.md  ARCHITECTURE.md  DEMO_GUIDE.md  DEVELOPMENT.md  OLLAMA_QUICKSTART.md  PERPLEXITY_INTEGRATION_ANALYSIS.md  PRECOMMIT.md  WEB_SEARCH_API_COMPARISON.md  WEB_SEARCH_SETUP.md
docs/Changes/: AGENT_ANSWER_FORMATTING_ENHANCEMENT.md  CHANGELOG.md  CODE_FIXES_IMPLEMENTATION.md  COMPREHENSIVE_CODE_ANALYSIS_REPORT.md  CRITICAL_FIXES_SUMMARY.md  CVE_ENHANCEMENT_ANALYSIS.md  FIXES_APPLIED.md  MODEL_FIX.md  P3_IMPLEMENTATION_PLAN.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_PARTIAL_COMPLETION_SUMMARY.md  RATE_LIMIT_ANALYSIS.md  RATE_LIMIT_FIX_SUMMARY.md  TEST_FIXES_SUMMARY.md  TEST_RESULTS_AND_FIXES.md  TODO_FIXES.md  UPGRADE_SUMMARY.md
docs/changes/: LLM_STATUS_DISPLAY_IMPLEMENTATION.md  LOCAL_LLM_INTEGRATION_PROPOSAL.md  MODEL_NAME_FIX_NOV14.md  OLLAMA_INTEGRATION_COMPLETE.md  agent-communication-todo.md  phase1-implementation-summary.md  phase2-3-implementation-summary.md  phase4-5-implementation-summary.md
src/: __init__.py
src/agent/: __init__.py  prompts.py  reasoning_chain.py  script_queue.py  script_reviewer.py  tools.py  workflow_orchestrator.py
src/dataset/: __init__.py  bias_analyzer.py  poisoning_detector.py  statistical_tests.py
src/mcp/: __init__.py  connectors.py
src/models/: __init__.py  script_state.py
src/security/: __init__.py  code_generator.py  cve_monitor.py  script_executor.py  threat_intel.py
src/utils/: __init__.py  config.py  config_validator.py  logger.py  rate_limiter.py
tests/: test_agent.py  test_analyze_dataset_stat_tests.py  test_config.py  test_config_validator.py  test_cve_monitor.py  test_dataset.py  test_logger.py  test_mcp_connectors.py  test_rate_limiting.py  test_script_executor.py  test_script_queue.py  test_script_reviewer.py  test_security.py  test_statistical_tests.py  test_threat_intel.py  test_workflow_orchestrator.py
tests/e2e/: __init__.py  conftest.py  test_cve_workflow.py  test_dataset_workflow.py
testse2e/: baseline_tests.txt  coverage.json  coverage_baseline.json
